<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.carlosalberto.formulario_carlos.ConfirmarDatos"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtvConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:text="@string/confirmar"
        android:textStyle="bold"
        android:textSize="@dimen/texto_confirmar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txtvTituloNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombConf"
            android:textSize="@dimen/estilo_texto"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/estilo_texto"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin_2"
        >

        <TextView
            android:id="@+id/txtvTituloFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechConf"
            android:textSize="@dimen/estilo_texto"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/estilo_texto"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin_2"
        >

        <TextView
            android:id="@+id/txtvTituloTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telConf"
            android:textSize="@dimen/estilo_texto"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/estilo_texto"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin_2"
        >

        <TextView
            android:id="@+id/txtvTituloEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mailConf"
            android:textSize="@dimen/estilo_texto"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/estilo_texto"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin_2"
        >

        <TextView
            android:id="@+id/txtvTituloDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descConf"
            android:textSize="@dimen/estilo_texto"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/estilo_texto"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/botonSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:theme="@style/risedButton"
            android:text="@string/editar"
            android:onClick="editarDatos"
            />

    </LinearLayout>

</LinearLayout>
