<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carlosalberto.formulario_carlos.MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        >

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_48"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtinpNombre"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        >

        <ImageView
            android:id="@+id/imgFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar_48"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinpFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fecha"
                android:inputType="date"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        >

        <ImageView
            android:id="@+id/imgTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone_48"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinpTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        >

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message_48"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        >

        <ImageView
            android:id="@+id/imgDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/create_new_48"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinpDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/descripcion"
                android:inputType="text"
                android:singleLine="false"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/botonSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/btn_siguiente"
            android:theme="@style/risedButton"
            android:onClick="lanzarActividad"
            />
    </LinearLayout>

</LinearLayout>
